--- a/src/memberTemplate.html
+++ b/src/memberTemplate.html
@@ -1,7 +1,7 @@
 <section class="card member-card">
     <section class="card-header">
-        <h2 class="card-title member-name"></h2>
-        <h4 class="card-title member-role"></h4>
+        <h2 class="card-title member-name">!name!</h2>
+        <h4 class="card-title member-role">!role!</h4>
     </section>
 </section>
 <section class="card-body">
